Rebased to master

--- a/exercise/exercise_book/exercise_book.tex
+++ b/exercise/exercise_book/exercise_book.tex
@@ -52,4 +52,5 @@ int main()
 	\pagebreak
 	\subfile{../01exercise_cpp/01exercise_cpp.tex}
 	\subfile{../02exercise_cpp/02exercise_cpp.tex}
+	\subfile{../03exercise_cpp/03exercise_cpp.tex}
 \end{document}
