--- a/include/preamble.tex
+++ b/include/preamble.tex
@@ -156,6 +156,7 @@
 % "note" environment definition
 \theoremstyle{definition}
 \newtheorem{note}{Megjegyzés}[subsection]
+\newtheorem{exercise}{Feladat}[subsection]
 
 % Commands for subfiles
 \newcommand{\onlyinsubfile}[1]{#1} % Its argument appears only when the file is compiled on its own
