Fixed an error with util/.clang-format

--- a/book/09gy_cpp/09gy_cpp.tex
+++ b/book/09gy_cpp/09gy_cpp.tex
@@ -147,7 +147,7 @@ int main() {
 	Tekintsünk az \texttt{std::vector} pár alkalmazását.
 	\begin{lstlisting}
 #include <vector>
-#inclide < iostream >
+#include <iostream>
 
 int main() {
   std::vector<int> v;
