--- a/exercise/01exercise_cpp/01exercise_cpp.tex
+++ b/exercise/01exercise_cpp/01exercise_cpp.tex
@@ -36,13 +36,10 @@
 		\smallskip
 		\fbox{\textbf{01\_01pp\_main.cpp}}
 		\begin{lstlisting}
+#include "01_01pp.h"
 #include <iostream>
-#include "01_01pp.h"
-#include "01_01pp.h"
 
-int main() {
-	std::cout << add(5, 6) << std::endl;
-}
+int main() { std::cout << add(5, 6) << std::endl; }
 		\end{lstlisting}
 		Kimenet: \texttt{11}
 		
@@ -59,9 +56,7 @@ int main() {
 
 // *
 
-int main() {
-	std::cout << 5 * ADD(1, 2) << std::endl;
-}
+int main() { std::cout << 5 * ADD(1, 2) << std::endl; }
 		\end{lstlisting}
 		Kimenet: \texttt{15}
 		
