--- a/book/09gy_cpp/09gy_cpp.tex
+++ b/book/09gy_cpp/09gy_cpp.tex
@@ -129,7 +129,7 @@ int main() {
 			fordított irányú&\multirow{2}{*}{\texttt{/*konténer név*/::reverse\_iterator}}&\multirow{2}{*}{\texttt{rbegin()}}&\multirow{2}{*}{\texttt{rend()}}\\
 			iterátor&&&\\
 			\hline
-			fordított irányú&\multirow{2}{*}{\texttt{/*konténer név*/::reverse\_const\_iterator}}&\multirow{2}{*}{\texttt{crbegin()}}&\multirow{2}{*}{\texttt{crend()}}\\
+			fordított irányú&\multirow{2}{*}{\texttt{/*konténer név*/::const\_reverse\_iterator}}&\multirow{2}{*}{\texttt{crbegin()}}&\multirow{2}{*}{\texttt{crend()}}\\
 			konstans iterátor&&&\\
 			\hline
 		\end{tabular}
