Indents are set to 0mm in all files

--- a/include/preamble.tex
+++ b/include/preamble.tex
@@ -162,3 +162,7 @@
 \newcommand{\onlyinsubfile}[1]{#1} % Its argument appears only when the file is compiled on its own
 \newcommand{\notinsubfile}[1]{} % Its argument appears only when the main file (or root file) is compiled
 %%%%%%%%% Custom command and environment definitions end %%%%%%%%%
+
+%%%%%%%%% General options %%%%%%%%%%%%
+
+\setlength\parindent{0pt}
