--- a/book/10gy_cpp/10gy_cpp.tex
+++ b/book/10gy_cpp/10gy_cpp.tex
@@ -417,7 +417,7 @@ std::cout << v.size() << std::endl; // 5
 		
 		{\centering\texttt{std::vector<int>::iterator it = remove(v.begin(), v.end(), 3);} \par}
 		
-		Bár az \texttt{auto} kulcsszót sokáig lehetne még boncolgatni, legyen annyi elég egyenlőre, hogy a template paraméter dedukciós szabályok szerint működik (c++11et nem szükséges tudni a vizsgához).
+		Bár az \texttt{auto} kulcsszót sokáig lehetne még boncolgatni, legyen annyi elég egyelőre, hogy a template paraméter dedukciós szabályok szerint működik (c++11-et nem szükséges tudni a vizsgához).
 	\end{note}
 	Az \texttt{std::remove\_if} működése az \texttt{std::find\_if} megértése után triviális.
 	
